# rust-embedded-size-tester

./: Cargo.toml  generate_outputs.sh  run_on_device.sh  run_on_device_normal.sh  rust_config.toml
.cargo/: config.toml
src/: main.rs
