[package]
name = "rust-embedded-size-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

[profile.release]
lto = true
debug = true
opt-level = "z"
panic = "abort"
codegen-units = 1
incremental = false
